@@ -6,6 +6,7 @@ Bug fixes:
 	* Bug #9841 - zpool export fails with -f force option. Bug reported and fixed by philwozza.
 	* Fixed bug where files bigger than 2 GB couldn't be opened on 64-bit platforms.
 	* Fixed compilation error on CentOS 4.4 (reported by Leroy van Logchem).
+	* Marked stack as non-executable. Found and fixed by Phil Worral (philwozza).
 
 2006/12/26 - Release 0.4.0_alpha1
 --------------------------------------------------
